Edit to fix drop down menu being cut off.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -19,6 +19,18 @@
 }
 /* For landing page. */
 
+
+/* For the edit profile. */
+
+.dropDownFix {
+  height: 30px;
+  padding: 0px 12px;
+  font-size: 13px;
+}
+
+
+/* For the edit profile drop down. */
+
 .icon{
   color: #6D9B7C;
 }
@@ -62,7 +74,7 @@ tbody {
 .doubleLine {
   display: flex;
   padding-top: 10px!important;
-  padding-bottom: 10px!important;
+  padding-bottom: 40px!important;
 }
 
 .profileForm, .scheduleBar {
